--- a/core/aarch64/Makefile
+++ b/core/aarch64/Makefile
@@ -1,6 +1,7 @@
 CONSTANTS-$(CONFIG_ENABLE_ASSERT) += -DENABLE_ASSERT
 CONSTANTS-$(CONFIG_ACPI_DSDT) += -DACPI_DSDT
 CONSTANTS-$(CONFIG_BACKTRACE) += -DBACKTRACE
+CONSTANTS-$(CONFIG_DEVICETREE) += -DDEVICETREE
 
 CFLAGS += -Icore/include
 CFLAGS += -Idevtree/libfdt
