--- a/drivers/aarch64/Makefile
+++ b/drivers/aarch64/Makefile
@@ -1,4 +1,5 @@
 CONSTANTS-$(CONFIG_ENABLE_ASSERT) += -DENABLE_ASSERT
+CONSTANTS-$(CONFIG_DEVICETREE) += -DDEVICETREE
 
 CFLAGS += -Idrivers/include
 
