--- a/Makefile.config
+++ b/Makefile.config
@@ -1,168 +1,43 @@
-# -*- makefile-gmake -*-
 include Makefile.common
-include $(CONFIG)
 
-# default configurations
-gcc_support_64 := \
-	$(shell $(CC) --target-help | grep x86_64: >/dev/null && /bin/echo -n 1 || /bin/echo -n 0)
-gcc_support_64 != $(CC) --target-help | grep x86_64: >/dev/null && /bin/echo -n 1 || /bin/echo -n 0
-arch_default != $(CC) -dumpmachine | tr "-" "\n" | head -n 1 | \
-		sed 's/i[3456]86/x86/;s/x86_64/x86/;s/amd64/x86/'
-arch_default_x86 != echo $(arch_default) | grep x86 > /dev/null && \
-		    /bin/echo -n 1 || /bin/echo -n 0
-arch_default_aarch64 != echo $(arch_default) | grep aarch64 > /dev/null && \
-			/bin/echo -n 1 || /bin/echo -n 0
-CONFIG_64 ?= $(gcc_support_64)
-CONFIG_ARCH_DFLT_X86 ?= $(arch_default_x86)
-CONFIG_ARCH_DFLT_AARCH64 ?= $(arch_default_aarch64)
-CONFIG_DEBUG_GDB ?= 0
-CONFIG_TTY_SERIAL ?= 0
-CONFIG_TTY_X540 ?= 1
-CONFIG_CPU_MMU_SPT_1 ?= 0
-CONFIG_CPU_MMU_SPT_2 ?= 0
-CONFIG_CPU_MMU_SPT_3 ?= 1
-CONFIG_CPU_MMU_SPT_DISABLE ?= 0
-CONFIG_CPU_MMU_SPT_USE_PAE ?= 1
-CONFIG_PS2KBD_F11PANIC ?= 0
-CONFIG_PS2KBD_F12MSG ?= 1
-CONFIG_DBGSH ?= 1
-CONFIG_STATUS ?= 0
-CONFIG_LOG_TO_GUEST ?= 0
-CONFIG_LOG_TO_IEEE1394 ?= 1
-CONFIG_ATA_DRIVER ?= 1
-CONFIG_NVME_DRIVER ?= 1
-CONFIG_STORAGE ?= 1
-CONFIG_STORAGE_IO ?= 1
-CONFIG_CRYPTO ?= 1
-CONFIG_VPN ?= 1
-CONFIG_USB_DRIVER ?= 1
-CONFIG_SHADOW_UHCI ?= 1
-CONFIG_SHADOW_EHCI ?= 1
-CONFIG_SHADOW_XHCI ?= 1
-CONFIG_HANDLE_USBMSC ?= 1
-CONFIG_HANDLE_USBHUB ?= 1
-CONFIG_CONCEAL_USBCCID ?= 1
-CONFIG_IEEE1394_CONCEALER ?= 1
-CONFIG_ACPI_DSDT ?= 1
-CONFIG_DISABLE_SLEEP ?= 0
-CONFIG_ENABLE_ASSERT ?= 1
-CONFIG_DEBUG_ATA ?= 0
-CONFIG_CARDSTATUS ?= 1
-CONFIG_IDMAN ?= 1
-CONFIG_NET_DRIVER ?= 1
-CONFIG_NET_PRO100 ?= 1
-CONFIG_NET_PRO1000 ?= 1
-CONFIG_NET_RTL8169 ?= 0
-CONFIG_NET_RE ?= 0
-CONFIG_NET_BNX ?= 1
-CONFIG_NET_AQ ?= 0
-CONFIG_NET_VIRTIO_NET ?= 1
-CONFIG_NET_V_VIRTIO_NET ?= 1
-CONFIG_VTD_TRANS ?= 0
-CONFIG_STORAGE_PD ?= 0
-CONFIG_IDMAN_PD ?= 0
-CONFIG_VPN_PD ?= 0
-CONFIG_DISABLE_TCG_BIOS ?= 0
-CONFIG_ACPI_TIME_SOURCE ?= 1
-CONFIG_TCG_BIOS ?= $(CONFIG_64)
-CONFIG_BACKTRACE ?= 0
-CONFIG_VGA_INTEL_DRIVER ?= 0
-CONFIG_VGA_UEFI ?= 0
-CONFIG_TTY_VGA ?= 0
-CONFIG_SHIFT_KEY_DEBUG ?= 0
-CONFIG_DUMP_PCI_DEV_LIST ?= 0
-CONFIG_IP ?= 1
-CONFIG_PCI_MONITOR ?= 1
-CONFIG_THREAD_1CPU ?= 0
-CONFIG_ACPI_IGNORE_ERROR ?= 0
-CONFIG_DISABLE_VTD ?= 1
-CONFIG_DMAR_PASS_THROUGH ?= 0
-CONFIG_USE_SYSCALL64 ?= 0
-CONFIG_SQLITE ?= 0
-CONFIG_DEBUG_SERIAL ?= 0
-CONFIG_WIREGUARD ?= 0
-CONFIG_TLS ?= 0
+.PHONY : check-python
+check-python :
+	$(PYTHON) -c 'import sys; e = 1 if sys.version_info < (3, 0) \
+		else 0; print("Need Python 3 or later to generate $(CONFIG)") \
+		if e == 1 else None; exit(e)'
 
-# config list
-CONFIGLIST :=
-CONFIGLIST += CONFIG_64=$(CONFIG_64)[64bit x86 VMM]
-CONFIGLIST += CONFIG_ARCH_DFLT_X86=$(CONFIG_ARCH_DFLT_X86)[$$(CC) default target is i386/x86_64]
-CONFIGLIST += CONFIG_ARCH_DFLT_AARCH64=$(CONFIG_ARCH_DFLT_AARCH64)[$$(CC) default target is Aarch64]
-CONFIGLIST += CONFIG_DEBUG_GDB=$(CONFIG_DEBUG_GDB)[gdb remote debug support (32bit only)]
-CONFIGLIST += CONFIG_TTY_SERIAL=$(CONFIG_TTY_SERIAL)[VMM uses a serial port (COM1) for output]
-CONFIGLIST += CONFIG_TTY_X540=$(CONFIG_TTY_X540)[VMM output to LAN]
-CONFIGLIST += CONFIG_CPU_MMU_SPT_1=$(CONFIG_CPU_MMU_SPT_1)[Shadow type 1 (very slow and stable)]
-CONFIGLIST += CONFIG_CPU_MMU_SPT_2=$(CONFIG_CPU_MMU_SPT_2)[Shadow type 2 (faster and unstable)]
-CONFIGLIST += CONFIG_CPU_MMU_SPT_3=$(CONFIG_CPU_MMU_SPT_3)[Shadow type 3 (faster and unstable)]
-CONFIGLIST += CONFIG_CPU_MMU_SPT_DISABLE=$(CONFIG_CPU_MMU_SPT_DISABLE)[Disable SPT (fast, insecure and no MMIO)]
-CONFIGLIST += CONFIG_CPU_MMU_SPT_USE_PAE=$(CONFIG_CPU_MMU_SPT_USE_PAE)[Shadow page table uses PAE]
-CONFIGLIST += CONFIG_PS2KBD_F11PANIC=$(CONFIG_PS2KBD_F11PANIC)[Panic when F11 is pressed (PS/2 only)]
-CONFIGLIST += CONFIG_PS2KBD_F12MSG=$(CONFIG_PS2KBD_F12MSG)[Print when F12 is pressed (PS/2 only)]
-CONFIGLIST += CONFIG_DBGSH=$(CONFIG_DBGSH)[Debug shell access from guest]
-CONFIGLIST += CONFIG_STATUS=$(CONFIG_STATUS)[Provide VMM status for guest]
-CONFIGLIST += CONFIG_LOG_TO_GUEST=$(CONFIG_LOG_TO_GUEST)[Log to guest memory]
-CONFIGLIST += CONFIG_LOG_TO_IEEE1394=$(CONFIG_LOG_TO_IEEE1394)[Log to IEEE 1394 host]
-CONFIGLIST += CONFIG_ATA_DRIVER=$(CONFIG_ATA_DRIVER)[Enable ATA driver]
-CONFIGLIST += CONFIG_NVME_DRIVER=$(CONFIG_NVME_DRIVER)[Enable NVMe driver]
-CONFIGLIST += CONFIG_STORAGE=$(CONFIG_STORAGE)[Enable storage process/encryption]
-CONFIGLIST += CONFIG_STORAGE_IO=$(CONFIG_STORAGE_IO)[Enable storage IO interface]
-CONFIGLIST += CONFIG_CRYPTO=$(CONFIG_CRYPTO)[Crypto library]
-CONFIGLIST += CONFIG_VPN=$(CONFIG_VPN)[Enable IPsec VPN Client]
-CONFIGLIST += CONFIG_USB_DRIVER=$(CONFIG_USB_DRIVER)[Enable USB driver]
-CONFIGLIST += CONFIG_SHADOW_UHCI=$(CONFIG_SHADOW_UHCI)[Shadow UHCI(USB1) transfers]
-CONFIGLIST += CONFIG_SHADOW_EHCI=$(CONFIG_SHADOW_EHCI)[Shadow EHCI(USB2) transfers]
-CONFIGLIST += CONFIG_SHADOW_XHCI=$(CONFIG_SHADOW_XHCI)[Shadow xHCI(USB3) transfers]
-CONFIGLIST += CONFIG_HANDLE_USBMSC=$(CONFIG_HANDLE_USBMSC)[Handle USB mass storage class devices]
-CONFIGLIST += CONFIG_HANDLE_USBHUB=$(CONFIG_HANDLE_USBHUB)[Handle USB hub class devices]
-CONFIGLIST += CONFIG_CONCEAL_USBCCID=$(CONFIG_CONCEAL_USBCCID)[Conceal USB ccid class device]
-CONFIGLIST += CONFIG_PS2KBD_F10USB=$(CONFIG_PS2KBD_F10USB)[Run a test for USB ICCD when F10 pressed]
-CONFIGLIST += CONFIG_PS2KBD_F12USB=$(CONFIG_PS2KBD_F12USB)[Dump EHCI async. list when F12 pressed]
-CONFIGLIST += CONFIG_IEEE1394_CONCEALER=$(CONFIG_IEEE1394_CONCEALER)[Conceal OHCI IEEE 1394 host controllers]
-CONFIGLIST += CONFIG_ACPI_DSDT=$(CONFIG_ACPI_DSDT)[Parse ACPI DSDT]
-CONFIGLIST += CONFIG_DISABLE_SLEEP=$(CONFIG_DISABLE_SLEEP)[Disable ACPI S2 and S3]
-CONFIGLIST += CONFIG_ENABLE_ASSERT=$(CONFIG_ENABLE_ASSERT)[Enable checking assertion failure]
-CONFIGLIST += CONFIG_DEBUG_ATA=$(CONFIG_DEBUG_ATA)[Enable debugging ATA driver]
-CONFIGLIST += CONFIG_CARDSTATUS=$(CONFIG_CARDSTATUS)[Panic if an IC card is ejected (IDMAN)]
-CONFIGLIST += CONFIG_IDMAN=$(CONFIG_IDMAN)[IDMAN (CRYPTO must be enabled)]
-CONFIGLIST += CONFIG_NET_DRIVER=$(CONFIG_NET_DRIVER)[Enable NIC drivers]
-CONFIGLIST += CONFIG_NET_PRO100=$(CONFIG_NET_PRO100)[Intel PRO/100 driver]
-CONFIGLIST += CONFIG_NET_PRO1000=$(CONFIG_NET_PRO1000)[Intel PRO/1000 driver]
-CONFIGLIST += CONFIG_NET_RTL8169=$(CONFIG_NET_RTL8169)[Realtek RTL8169 driver]
-CONFIGLIST += CONFIG_NET_RE=$(CONFIG_NET_RE)[Realtek Family driver]
-CONFIGLIST += CONFIG_NET_BNX=$(CONFIG_NET_BNX)[Broadcom NetXtreme GbE driver]
-CONFIGLIST += CONFIG_NET_AQ=$(CONFIG_NET_AQ)[Aquantia ACQ107 driver]
-CONFIGLIST += CONFIG_NET_VIRTIO_NET=$(CONFIG_NET_VIRTIO_NET)[Enable virtio-net for PRO1000/BNX]
-CONFIGLIST += CONFIG_NET_V_VIRTIO_NET=$(CONFIG_NET_V_VIRTIO_NET)[Enable virtio-net virtual driver]
-CONFIGLIST += CONFIG_VTD_TRANS=$(CONFIG_VTD_TRANS)[Enable VT-d translation]
-CONFIGLIST += CONFIG_STORAGE_PD=$(CONFIG_STORAGE_PD)[Storage encrypting in protection domain]
-CONFIGLIST += CONFIG_IDMAN_PD=$(CONFIG_IDMAN_PD)[IDMan in protection domain]
-CONFIGLIST += CONFIG_VPN_PD=$(CONFIG_VPN_PD)[VPN in protection domain]
-CONFIGLIST += CONFIG_DISABLE_TCG_BIOS=$(CONFIG_DISABLE_TCG_BIOS)[Disable TCG BIOS (TPM related)]
-CONFIGLIST += CONFIG_ACPI_TIME_SOURCE=$(CONFIG_ACPI_TIME_SOURCE)[Use ACPI PM Timer as time source]
-CONFIGLIST += CONFIG_TCG_BIOS=$(CONFIG_TCG_BIOS)[TCG BIOS support]
-CONFIGLIST += CONFIG_BACKTRACE=$(CONFIG_BACKTRACE)[Enable backtrace in panic]
-CONFIGLIST += CONFIG_VGA_INTEL_DRIVER=$(CONFIG_VGA_INTEL_DRIVER)[Enable vga_intel driver]
-CONFIGLIST += CONFIG_VGA_UEFI=$(CONFIG_VGA_UEFI)[Enable UEFI GOP VGA driver]
-CONFIGLIST += CONFIG_TTY_VGA=$(CONFIG_TTY_VGA)[VMM output using VGA driver]
-CONFIGLIST += CONFIG_SHIFT_KEY_DEBUG=$(CONFIG_SHIFT_KEY_DEBUG)[Debug shell with shift key while booting]
-CONFIGLIST += CONFIG_DUMP_PCI_DEV_LIST=$(CONFIG_DUMP_PCI_DEV_LIST)[Dump list of PCI devices]
-CONFIGLIST += CONFIG_IP=$(CONFIG_IP)[Enable TCP/IP stack]
-CONFIGLIST += CONFIG_PCI_MONITOR=$(CONFIG_PCI_MONITOR)[PCI I/O monitor driver]
-CONFIGLIST += CONFIG_THREAD_1CPU=$(CONFIG_THREAD_1CPU)[Disable parallel thread processing]
-CONFIGLIST += CONFIG_ACPI_IGNORE_ERROR=$(CONFIG_ACPI_IGNORE_ERROR)[Ignore ACPI DSDT/SSDT parse errors]
-CONFIGLIST += CONFIG_DISABLE_VTD=$(CONFIG_DISABLE_VTD)[Disable VT-d translation if enabled]
-CONFIGLIST += CONFIG_DMAR_PASS_THROUGH=$(CONFIG_DMAR_PASS_THROUGH)[Enable DMAR pass-through]
-CONFIGLIST += CONFIG_USE_SYSCALL64=$(CONFIG_USE_SYSCALL64)[Use SYSCALL for 64bit system call]
-CONFIGLIST += CONFIG_SQLITE=$(CONFIG_SQLITE)[SQLite in protection domain]
-CONFIGLIST += CONFIG_DEBUG_SERIAL=$(CONFIG_DEBUG_SERIAL)[Debug serial for Linux early console]
-CONFIGLIST += CONFIG_WIREGUARD=$(CONFIG_WIREGUARD)[Wireguard for vmm]
-CONFIGLIST += CONFIG_TLS=$(CONFIG_TLS)[Enable TLS connection with Mbed-TLS]
+.PHONY : check-empty-config
+check-empty-config :
+	if ! grep . $(CONFIG) > /dev/null 2> /dev/null; then \
+		echo "Unexpected empty $(CONFIG)" \
+			"run 'make config' to generate it properly"; \
+		false; \
+	fi
 
-.PHONY : update-config
-update-config :
-	/bin/echo -n '$(CONFIGLIST)' | tr '[' '#' | tr ']' '\n' | \
-		sed 's/^ //' > $(CONFIG)
+.PHONY : check-old-config
+check-old-config :
+	if grep '=[01]' $(CONFIG) > /dev/null 2> /dev/null; then \
+		echo "Old style $(CONFIG) found, please back up it," \
+			"run 'make config', and reconfigure for new format"; \
+		false; \
+	fi
 
-.PHONY : config
-config : update-config
-	./config.sh
+.PHONY : menuconfig
+menuconfig :
+	$(MAKE) $(V-makeopt-$(V)) -f Makefile.config check-python V=$(V)
+	$(MAKE) $(V-makeopt-$(V)) -f Makefile.config check-old-config V=$(V)
+	CC=$(CC) $(PYTHON) scripts/kconfig/menuconfig.py
+
+.PHONY : default-config
+default-config :
+	$(MAKE) $(V-makeopt-$(V)) -f Makefile.config check-python V=$(V)
+	$(MAKE) $(V-makeopt-$(V)) -f Makefile.config check-old-config V=$(V)
+	: >> $(CONFIG)
+	if ! CC=$(CC) $(PYTHON) scripts/kconfig/kconfig.py Kconfig .config \
+		/dev/null /dev/null .config; then \
+		echo "scripts/kconfig/kconfig.py fails"; \
+		if ! grep . $(CONFIG) > /dev/null 2> /dev/null; then \
+			echo "Removing empty $(CONFIG)"; $(RM) $(CONFIG); \
+		fi; \
+		false; \
+	fi # Remove empty $(CONFIG) in case of failure
