--- a/core/Makefile
+++ b/core/Makefile
@@ -20,45 +20,45 @@ CFLAGS += -I$(DIR)/include
 CFLAGS += -Ivpn/lib
 CFLAGS += $(CFLAGS_EDK2_INC)
 
-subdirs-1 += $(ARCH)
+subdirs-y += $(ARCH)
 
-objs-1 += acpi.o
-objs-1 += acpi_dsdt.o
-objs-1 += assert.o
-objs-1 += bplus_tree.o
-objs-1 += calluefi.o
-objs-1 += config.o
-objs-1 += debug.o
-objs-1 += dres.o
-objs-1 += exint_pass.o
-objs-1 += iccard.o
-objs-1 += initfunc.o
-objs-1 += keyboard.o
-objs-1 += mm.o
-objs-1 += msg.o
-objs-1 += panic.o
-objs-1 += phys.o
-objs-1 += printf.o
-objs-1 += process.o
-objs-1 += putchar.o
-objs-1 += qsort.o
-objs-1 += random.o
-objs-1 += reboot.o
-objs-1 += string.o
-objs-1 += strtol.o
-objs-1 += sym.o
-objs-1 += thread.o
-objs-1 += time.o
-objs-1 += timer.o
-objs-1 += tty.o
-objs-1 += uefi.o
-objs-1 += uefi_param_ext.o
-objs-1 += uefiutil.o
-objs-1 += vga.o
-objs-1 += vmmcall.o
-objs-1 += vmmcall_boot.o
-objs-1 += vmmcall_dbgsh.o
-objs-1 += vmmcall_iccard.o
-objs-1 += vmmcall_log.o
-objs-1 += vmmcall_status.o
-objs-1 += vramwrite.o
+objs-y += acpi.o
+objs-y += acpi_dsdt.o
+objs-y += assert.o
+objs-y += bplus_tree.o
+objs-y += calluefi.o
+objs-y += config.o
+objs-y += debug.o
+objs-y += dres.o
+objs-y += exint_pass.o
+objs-y += iccard.o
+objs-y += initfunc.o
+objs-y += keyboard.o
+objs-y += mm.o
+objs-y += msg.o
+objs-y += panic.o
+objs-y += phys.o
+objs-y += printf.o
+objs-y += process.o
+objs-y += putchar.o
+objs-y += qsort.o
+objs-y += random.o
+objs-y += reboot.o
+objs-y += string.o
+objs-y += strtol.o
+objs-y += sym.o
+objs-y += thread.o
+objs-y += time.o
+objs-y += timer.o
+objs-y += tty.o
+objs-y += uefi.o
+objs-y += uefi_param_ext.o
+objs-y += uefiutil.o
+objs-y += vga.o
+objs-y += vmmcall.o
+objs-y += vmmcall_boot.o
+objs-y += vmmcall_dbgsh.o
+objs-y += vmmcall_iccard.o
+objs-y += vmmcall_log.o
+objs-y += vmmcall_status.o
+objs-y += vramwrite.o
