--- a/core/x86/Makefile
+++ b/core/x86/Makefile
@@ -24,102 +24,102 @@ CONSTANTS-$(CONFIG_DEBUG_SERIAL) += -DDEBUG_SERIAL
 CFLAGS += -Icore/include
 CFLAGS += $(CFLAGS_EDK2_INC)
 
-objs-1 += acpi.o
-objs-1 += acpi_dmar.o
-objs-1 += acpi_iohook.o
-objs-1 += ap.o
-objs-1 += arith.o
-objs-1 += asm.o
-objs-1 += beep.o
-objs-1 += cache.o
-objs-1 += callrealmode.o
-objs-1 += callrealmode_asm.o
-objs-1 += calluefi.o
-objs-1 += calluefi_asm.o
-objs-1 += cpu_emul.o
-objs-1 += cpu_interpreter.o
-objs-1 += cpu_mmu.o
-objs-1 += cpu_mmu_spt.o
-objs-1 += cpu_seg.o
-objs-1 += cpu_stack.o
-objs-1 += cpuid.o
-objs-1 += cpuid_pass.o
-objs-1 += current.o
-objs-1 += currentcpu.o
-objs-1 += debug.o
-objs-1 += entry.o
-objs-1 += exint.o
-objs-1 += exint_pass.o
-objs-1 += gmm.o
-objs-1 += gmm_access.o
-objs-1 += gmm_pass.o
-objs-1 += guest_bioshook.o
-objs-1 += i386-stub.o
-objs-1 += initipi.o
-objs-1 += initipi_pass.o
-objs-1 += int.o
-objs-1 += int_handler.o
-objs-1 += io_io.o
-objs-1 += io_iohook.o
-objs-1 += io_iopass.o
-objs-1 += keyboard.o
-objs-1 += loadbootsector.o
-objs-1 += localapic.o
-objs-1 += main.o
-objs-1 += mm.o
-objs-1 += mmio.o
-objs-1 += mmioclr.o
-objs-1 += msr.o
-objs-1 += msr_pass.o
-objs-1 += nmi.o
-objs-1 += nmi_handler.o
-objs-1 += nmi_pass.o
-objs-1 += osloader.o
-objs-1 += panic.o
-objs-1 += pcpu.o
-objs-1 += pmap.o
-objs-1 += process.o
-objs-1 += process_sysenter.o
-objs-1 += random.o
-objs-1 += reboot.o
-objs-1 += savemsr.o
-objs-1 += seg.o
-objs-1 += serial.o
-objs-1 += sleep.o
-objs-1 += string.o
-objs-1 += svm.o
-objs-1 += svm_exitcode.o
-objs-1 += svm_init.o
-objs-1 += svm_io.o
-objs-1 += svm_main.o
-objs-1 += svm_msr.o
-objs-1 += svm_np.o
-objs-1 += svm_paging.o
-objs-1 += svm_panic.o
-objs-1 += svm_regs.o
-objs-1 += sx_handler.o
-objs-1 += tcg.o
-objs-1 += thread.o
-objs-1 += thread_switch.o
-objs-1 += time.o
-objs-1 += tty.o
-objs-1 += uefi.o
-objs-1 += vcpu.o
-objs-1 += vmm_mem.o
-objs-1 += vmmcall.o
-objs-1 += vramwrite_pc.o
-objs-1 += vt.o
-objs-1 += vt_ept.o
-objs-1 += vt_exitreason.o
-objs-1 += vt_init.o
-objs-1 += vt_io.o
-objs-1 += vt_main.o
-objs-1 += vt_msr.o
-objs-1 += vt_paging.o
-objs-1 += vt_panic.o
-objs-1 += vt_regs.o
-objs-1 += vt_shadow_vt.o
-objs-1 += wakeup.o
-objs-1 += wakeup_entry.o
-objs-1 += xsetbv.o
-objs-1 += xsetbv_pass.o
+objs-y += acpi.o
+objs-y += acpi_dmar.o
+objs-y += acpi_iohook.o
+objs-y += ap.o
+objs-y += arith.o
+objs-y += asm.o
+objs-y += beep.o
+objs-y += cache.o
+objs-y += callrealmode.o
+objs-y += callrealmode_asm.o
+objs-y += calluefi.o
+objs-y += calluefi_asm.o
+objs-y += cpu_emul.o
+objs-y += cpu_interpreter.o
+objs-y += cpu_mmu.o
+objs-y += cpu_mmu_spt.o
+objs-y += cpu_seg.o
+objs-y += cpu_stack.o
+objs-y += cpuid.o
+objs-y += cpuid_pass.o
+objs-y += current.o
+objs-y += currentcpu.o
+objs-y += debug.o
+objs-y += entry.o
+objs-y += exint.o
+objs-y += exint_pass.o
+objs-y += gmm.o
+objs-y += gmm_access.o
+objs-y += gmm_pass.o
+objs-y += guest_bioshook.o
+objs-y += i386-stub.o
+objs-y += initipi.o
+objs-y += initipi_pass.o
+objs-y += int.o
+objs-y += int_handler.o
+objs-y += io_io.o
+objs-y += io_iohook.o
+objs-y += io_iopass.o
+objs-y += keyboard.o
+objs-y += loadbootsector.o
+objs-y += localapic.o
+objs-y += main.o
+objs-y += mm.o
+objs-y += mmio.o
+objs-y += mmioclr.o
+objs-y += msr.o
+objs-y += msr_pass.o
+objs-y += nmi.o
+objs-y += nmi_handler.o
+objs-y += nmi_pass.o
+objs-y += osloader.o
+objs-y += panic.o
+objs-y += pcpu.o
+objs-y += pmap.o
+objs-y += process.o
+objs-y += process_sysenter.o
+objs-y += random.o
+objs-y += reboot.o
+objs-y += savemsr.o
+objs-y += seg.o
+objs-y += serial.o
+objs-y += sleep.o
+objs-y += string.o
+objs-y += svm.o
+objs-y += svm_exitcode.o
+objs-y += svm_init.o
+objs-y += svm_io.o
+objs-y += svm_main.o
+objs-y += svm_msr.o
+objs-y += svm_np.o
+objs-y += svm_paging.o
+objs-y += svm_panic.o
+objs-y += svm_regs.o
+objs-y += sx_handler.o
+objs-y += tcg.o
+objs-y += thread.o
+objs-y += thread_switch.o
+objs-y += time.o
+objs-y += tty.o
+objs-y += uefi.o
+objs-y += vcpu.o
+objs-y += vmm_mem.o
+objs-y += vmmcall.o
+objs-y += vramwrite_pc.o
+objs-y += vt.o
+objs-y += vt_ept.o
+objs-y += vt_exitreason.o
+objs-y += vt_init.o
+objs-y += vt_io.o
+objs-y += vt_main.o
+objs-y += vt_msr.o
+objs-y += vt_paging.o
+objs-y += vt_panic.o
+objs-y += vt_regs.o
+objs-y += vt_shadow_vt.o
+objs-y += wakeup.o
+objs-y += wakeup_entry.o
+objs-y += xsetbv.o
+objs-y += xsetbv_pass.o
