--- a/idman/lib/standardio/Makefile
+++ b/idman/lib/standardio/Makefile
@@ -1,6 +1,6 @@
 CONSTANTS-$(CONFIG_ENABLE_ASSERT) += -DENABLE_ASSERT
 CONSTANTS-$(CONFIG_IDMAN_PD) += -DIDMAN_PD
-CONSTANTS-1 += -DNTTCOM
+CONSTANTS-y += -DNTTCOM
 
 CFLAGS += -Iidman/lib/ccid -Iidman/lib/iccard -Iidman/lib/idman_pkcs11
 CFLAGS += -Iidman/lib/pcsc -Iidman/lib/pkcs11 -Iidman/lib/standardio
@@ -8,4 +8,4 @@ CFLAGS += -Iidman/lib/user
 CFLAGS += -Idrivers -Idrivers/usb
 CFLAGS += -Icrypto -Icrypto/openssl-$(OPENSSL_VERSION)/include
 
-objs-1 += IDMan_StandardIo.o
+objs-y += IDMan_StandardIo.o
