--- a/ip/Makefile
+++ b/ip/Makefile
@@ -13,49 +13,49 @@ CFLAGS-TLS-$(CONFIG_TLS) += -I$(DIR)/include/mbedtls \
 	-I$(DIR)/mbedtls/mbedtls-$(MBEDTLS_VERSION)/library \
 	-I$(DIR)/lwip-$(LWIP_VERSION)/src/apps/altcp_tls \
 	-DMBEDTLS_CONFIG_FILE='<config_mbedtls_2.h>'
-CFLAGS += $(CFLAGS-TLS-1)
+CFLAGS += $(CFLAGS-TLS-y)
 
-objs-1 += lwip-$(LWIP_VERSION)/src/core/def.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/dns.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/init.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/mem.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/memp.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/netif.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/pbuf.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/raw.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/stats.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/sys.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/tcp.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/tcp_in.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/tcp_out.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/udp.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/timeouts.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/ip.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/inet_chksum.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/ipv4/autoip.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/ipv4/dhcp.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/ipv4/etharp.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/ipv4/igmp.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/ipv4/icmp.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/ipv4/ip4.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/ipv4/ip4_addr.o
-objs-1 += lwip-$(LWIP_VERSION)/src/core/ipv4/ip4_frag.o
-objs-1 += lwip-$(LWIP_VERSION)/src/netif/ethernet.o
-objs-1 += lwip-$(LWIP_VERSION)/src/api/api_lib.o
-objs-1 += lwip-$(LWIP_VERSION)/src/api/api_msg.o
-objs-1 += lwip-$(LWIP_VERSION)/src/api/err.o
-objs-1 += lwip-$(LWIP_VERSION)/src/api/netbuf.o
-objs-1 += lwip-$(LWIP_VERSION)/src/api/netdb.o
-objs-1 += lwip-$(LWIP_VERSION)/src/api/netifapi.o
-objs-1 += lwip-$(LWIP_VERSION)/src/api/sockets.o
-objs-1 += lwip-$(LWIP_VERSION)/src/api/tcpip.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/def.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/dns.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/init.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/mem.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/memp.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/netif.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/pbuf.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/raw.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/stats.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/sys.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/tcp.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/tcp_in.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/tcp_out.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/udp.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/timeouts.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/ip.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/inet_chksum.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/ipv4/autoip.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/ipv4/dhcp.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/ipv4/etharp.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/ipv4/igmp.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/ipv4/icmp.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/ipv4/ip4.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/ipv4/ip4_addr.o
+objs-y += lwip-$(LWIP_VERSION)/src/core/ipv4/ip4_frag.o
+objs-y += lwip-$(LWIP_VERSION)/src/netif/ethernet.o
+objs-y += lwip-$(LWIP_VERSION)/src/api/api_lib.o
+objs-y += lwip-$(LWIP_VERSION)/src/api/api_msg.o
+objs-y += lwip-$(LWIP_VERSION)/src/api/err.o
+objs-y += lwip-$(LWIP_VERSION)/src/api/netbuf.o
+objs-y += lwip-$(LWIP_VERSION)/src/api/netdb.o
+objs-y += lwip-$(LWIP_VERSION)/src/api/netifapi.o
+objs-y += lwip-$(LWIP_VERSION)/src/api/sockets.o
+objs-y += lwip-$(LWIP_VERSION)/src/api/tcpip.o
 
-objs-1 += ip_sys.o arch/sys_arch.o
-objs-1 += ip_main.o net_main.o
+objs-y += ip_sys.o arch/sys_arch.o
+objs-y += ip_main.o net_main.o
 objs-$(CONFIG_WIREGUARD) += net_main_wg.o
-objs-1 += echo-server.o echo-client.o echoctl.o
-objs-1 += telnet-server.o telnet-dbgsh.o
-objs-1 += string.o
+objs-y += echo-server.o echo-client.o echoctl.o
+objs-y += telnet-server.o telnet-dbgsh.o
+objs-y += string.o
 objs-$(CONFIG_WIREGUARD) += wireguard/wg_main.o \
 wireguard/wireguard-lwip/src/crypto/refc/blake2s.o \
 wireguard/wireguard-lwip/src/crypto/refc/chacha20.o \
