--- a/process/Makefile
+++ b/process/Makefile
@@ -1,12 +1,12 @@
 CFLAGS += -Iprocess/lib
 CONSTANTS-$(CONFIG_TLS) += -DMBEDTLS_VMM
 
-bins-1 += debug help init log panic recvexample sendexample sendint
-bins-1 += serialtest shell
+bins-y += debug help init log panic recvexample sendexample sendint
+bins-y += serialtest shell
 bins-$(CONFIG_IDMAN) += idman
 bins-$(CONFIG_STORAGE) += storage
 bins-$(CONFIG_VPN) += vpn
-asubdirs-1 += lib
+asubdirs-y += lib
 bins-$(CONFIG_IP) += echoctl
 bins-$(CONFIG_TLS) += echoctl_tls
 bins-$(CONFIG_PCI_MONITOR) += monitor
