--- a/Makefile.build.x86
+++ b/Makefile.build.x86
@@ -1,14 +1,16 @@
 # -*- makefile-gmake -*-
 
-bits-0 = 32
-bits-1 = 64
+bits-$(CONFIG_64) = 64
+# Default to 32 when CONFIG_64 is not set
+bits-y ?= 32
+bits = $(bits-y)
 CFLAGS_EDK2-32 = -Iedk2/MdePkg/Include/Ia32
 CFLAGS_EDK2-64 = -Iedk2/MdePkg/Include/X64
-CFLAGS_EDK2_ARCH_INC = $(CFLAGS_EDK2-$(bits-$(CONFIG_64)))
-CFLAGS_ARCH = -m$(bits-$(CONFIG_64)) -mno-red-zone -mno-sse \
+CFLAGS_EDK2_ARCH_INC = $(CFLAGS_EDK2-$(bits))
+CFLAGS_ARCH = -m$(bits) -mno-red-zone -mno-sse \
 	      -fno-strict-aliasing -Wno-address-of-packed-member
-ASFLAGS_ARCH = -m$(bits-$(CONFIG_64)) -Wa,--divide -Wa,--noexecstack
-LDFLAGS_ARCH = -m$(bits-$(CONFIG_64))
+ASFLAGS_ARCH = -m$(bits) -Wa,--divide -Wa,--noexecstack
+LDFLAGS_ARCH = -m$(bits)
 
 # Currently no special flags for x86
 LDFLAGS_ELF =
