--- a/Makefile.common
+++ b/Makefile.common
@@ -8,6 +8,7 @@ OBJCOPY = $(CROSS_COMPILE)objcopy
 SED = sed
 SIZE = $(CROSS_COMPILE)size
 STRIP = $(CROSS_COMPILE)strip
+PYTHON = python3
 
 # files
 CONFIG = .config
