--- a/crypto/chelp/Makefile
+++ b/crypto/chelp/Makefile
@@ -1,3 +1,3 @@
 CFLAGS += -Icrypto -Icrypto/openssl-$(OPENSSL_VERSION)/include
 
-objs-1 += chelp.o chelp_mem.o chelp_str.o decryptcfg.o
+objs-y += chelp.o chelp_mem.o chelp_str.o decryptcfg.o
