--- a/drivers/nvme/Makefile
+++ b/drivers/nvme/Makefile
@@ -3,7 +3,7 @@ CONSTANTS-$(CONFIG_VTD_TRANS) += -DVTD_TRANS
 
 CFLAGS += -Idrivers/include
 
-objs-1 += nvme.o nvme_subm_handler.o nvme_comp_handler.o nvme_common.o \
+objs-y += nvme.o nvme_subm_handler.o nvme_comp_handler.o nvme_common.o \
 	  nvme_io.o
 objs-$(CONFIG_STORAGE) += nvme_crypt.o
 objs-$(CONFIG_STORAGE_IO) += nvme_storage_io.o
