--- a/drivers/usb/Makefile
+++ b/drivers/usb/Makefile
@@ -7,7 +7,7 @@ CONSTANTS-$(CONFIG_HANDLE_USBHUB) += -DHANDLE_USBHUB
 CONSTANTS-$(CONFIG_CONCEAL_USBCCID) += -DCONCEAL_USBCCID
 CONSTANTS-$(CONFIG_PS2KBD_F10USB) += -DF10USBTEST
 CONSTANTS-$(CONFIG_PS2KBD_F12USB) += -DF12DUMPEHCI
-CONSTANTS-1 += -DENABLE_DPRINTF
+CONSTANTS-y += -DENABLE_DPRINTF
 
 CFLAGS += -Idrivers/include
 
@@ -17,4 +17,4 @@ objs-$(CONFIG_SHADOW_XHCI) += xhci.o xhci_shadow.o xhci_trans.o
 objs-$(CONFIG_HANDLE_USBMSC) += usb_mscd.o
 objs-$(CONFIG_HANDLE_USBHUB) += usb_hub.o
 objs-$(CONFIG_CONCEAL_USBCCID) += usb_ccid.o
-objs-1 += usb.o usb_device.o usb_hid.o usb_hook.o usb_log.o
+objs-y += usb.o usb_device.o usb_hid.o usb_hook.o usb_log.o
