--- a/idman/lib/pkcs11/Makefile
+++ b/idman/lib/pkcs11/Makefile
@@ -1,10 +1,10 @@
 CONSTANTS-$(CONFIG_ENABLE_ASSERT) += -DENABLE_ASSERT
 CONSTANTS-$(CONFIG_IDMAN_PD) += -DIDMAN_PD
-CONSTANTS-1 += -DNTTCOM
+CONSTANTS-y += -DNTTCOM
 
 CFLAGS += -Iidman/lib/ccid -Iidman/lib/iccard -Iidman/lib/idman_pkcs11
 CFLAGS += -Iidman/lib/pcsc -Iidman/lib/pkcs11 -Iidman/lib/standardio
 CFLAGS += -Iidman/lib/user
 
-objs-1 += IDMan_PKCardAccess.o IDMan_PKCardData.o IDMan_PKList.o
-objs-1 += IDMan_PKPkcs11.o
+objs-y += IDMan_PKCardAccess.o IDMan_PKCardData.o IDMan_PKList.o
+objs-y += IDMan_PKPkcs11.o
