--- a/storage_io/Makefile
+++ b/storage_io/Makefile
@@ -1,4 +1,4 @@
 CONSTANTS-$(CONFIG_ENABLE_ASSERT) += -DENABLE_ASSERT
 CONSTANTS-$(CONFIG_STORAGE_PD) += -DSTORAGE_PD
 
-objs-1 += storage_io.o
+objs-y += storage_io.o
