dres: device resource register access abstraction initial implementation
Address seen by device can be different from CPU point of view. This is
possible for PCI devices. This is platform dependent. BitVisor needs to
map address from CPU point of view to access. Trapping access to device
registers is another problem. IO address can be backed by memory like
MMIO.

We introduce dres_reg to handle such problems. It provides an abstraction
to access device registers and to trap access device registers from the
guest. The general idea is to create a handle with dres_reg_alloc() with a
given device registers, its type, and an appropriate translation function.
dres_reg_read*() and dres_reg_write*() are access device registers. From
now on, drivers should avoid using memcpy()/memset(). The standard does
not specify how they access memory.

Calling dres_reg_register_handler() on the created handle is
used when the caller wants to trap access to the device registers.

While dres_reg_alloc() automatically maps the device registers so that
dres_reg_read*() and dres_reg_write*() can be used, dres_reg_nomap_alloc()
is also provided in case the caller wants to handle this on its own.
dres_reg_nomap_cpu_addr_base() and dres_reg_nomap_real_addr_type() are
used for accessing the translation results.

--- a/core/Makefile
+++ b/core/Makefile
@@ -28,6 +28,7 @@ objs-1 += assert.o
 objs-1 += calluefi.o
 objs-1 += config.o
 objs-1 += debug.o
+objs-1 += dres.o
 objs-1 += exint_pass.o
 objs-1 += iccard.o
 objs-1 += initfunc.o
