aarch64/psci: initial PSCI CPU_SUSPEND handling implementation
When the guest OS wants to reduce its power consumption during idle, it
can issue PSCI CPU_SUSPEND to power-down a core. This is common on any
modern OS. So, BitVisor needs to be able to handle the request from the
guest.

To support PSCI CPU_SUSPEND, BitVisor needs to trap the request from the
guest. For non-power-down requests, it can be passthrough. However, for
power-down requests, BitVisor needs to record the guest entry point and
context. It then issues PSCI CPU_SUSPEND power-down with its own entry
point and context. Upon wake up, BitVisor reinitializes its system
registers before entering the guest.

This implementation is tested with Ubuntu running on NVIDIA Jetson Orin
Nano without PCI driver initialized. Current BitVisor implementation is
not sufficient to handle PCI power-off at UEFI ExitBootServices.

--- a/core/aarch64/Makefile
+++ b/core/aarch64/Makefile
@@ -12,6 +12,7 @@ objs-y += acc_emu_asm.o
 objs-y += acpi.o
 objs-y += arith.o
 objs-y += calluefi_asm.o
+objs-y += cnt.o
 objs-y += currentcpu.o
 objs-y += debug.o
 objs-y += entry.o
